--- a/docs/main.css
+++ b/docs/main.css
@@ -2,14 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 * {
     font-family: Poppins;
+    color: white;
 }
 p {
     font-family: Open Sans;
-    color: white;
 }
 
 body {
-    background-color: #040404;
+    background-color: #f3f3f3;
   }
   
 h1, h2, h3, p {
