--- a/docs/main.css
+++ b/docs/main.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,400,600,800|Roboto:200,400,600,800");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 * {
     font-family: Poppins;
     background-color: white;
 }
 p {
-    font-family: Roboto;
+    font-family: Open Sans;
 }
   
 h1, h2, h3, p {
