--- a/docs/main.css
+++ b/docs/main.css
@@ -5,7 +5,7 @@
     background-color: white;
 }
 p {
-    font-family: Open Sans;
+    font-family: 'Open Sans', sans-serif;
 }
   
 h1, h2, h3, p {
