--- a/docs/nav.css
+++ b/docs/nav.css
@@ -16,18 +16,8 @@ nav {
   position: relative;
 }
 
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  top: 0;
-  width: 100%;
-  background-color: #333;
-}
-
 nav li {
-    float: left;
+    float: center;
 }
 
 nav li a, .nav {
