--- a/docs/nav.css
+++ b/docs/nav.css
@@ -20,3 +20,25 @@ nav {
   width: 100%;
   position: relative;
 }
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  top: 0;
+  width: 100%;
+  background-color: #333;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a, .nav {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
