--- a/docs/nav.css
+++ b/docs/nav.css
@@ -14,11 +14,10 @@ footer p {
 
 
 nav {
-  overflow: hidden;
   left: 0;
   top: 0;
   width: 100%;
-  position: relative;
+  position: absolute;
 }
 
 nav ul {
