--- a/docs/nav.css
+++ b/docs/nav.css
@@ -37,7 +37,7 @@ nav li {
 
 nav li a, .nav {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
