--- a/docs/main.css
+++ b/docs/main.css
@@ -5,9 +5,8 @@
     background-color: white;
 }
 p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Roboto;
 }
-  
 h1, h2, h3, p {
     text-align: center;
 }
