--- a/docs/nav.css
+++ b/docs/nav.css
@@ -11,16 +11,6 @@ footer {
 footer p {
     background-color: gray;
 }
-
-
-nav {
-  left: 0;
-  top: 0;
-  width: 100%;
-  position: relative;
-  background-color: gray;
-}
-
 nav ul {
   list-style-type: none;
   margin: 0;
@@ -40,4 +30,38 @@ nav li a, .nav {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+
+nav {
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  width: 100%;
+  position: relative;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  top: 0;
+  width: 100%;
+  background-color: #333;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a, .nav {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: black;
 }
