--- a/docs/nav.css
+++ b/docs/nav.css
@@ -27,6 +27,7 @@ nav li {
 nav li a {
     display: block;
     color: black;
+    background-color: #030303;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
