--- a/docs/nav.css
+++ b/docs/nav.css
@@ -41,9 +41,9 @@ nav {
   position: relative;
 }
 
-nav li a, .nav {
+nav li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
