--- a/docs/nav.css
+++ b/docs/nav.css
@@ -18,7 +18,7 @@ nav li {
 
 nav li a {
     display: block;
-    color: black;
+    color: white;
     background-color: #484848;
     text-align: center;
     padding: 14px 16px;
