--- a/docs/nav.css
+++ b/docs/nav.css
@@ -14,6 +14,7 @@ footer p {
 
 nav li {
     float: left;
+    background-color: #484848;
 }
 
 nav li a {
@@ -43,5 +44,5 @@ nav ul {
   padding: 0;
   top: 0;
   width: 100%;
-  background-color: gray;
+  background-color: #484848;
 }
